# RagLift

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
docs/: USAGE.md  VSCODE_EXTENSION.md
examples/basic/: README.md  raglift.toml
examples/basic/docs/: demo.md
examples/docs-assistant/: README.md  raglift.toml
examples/docs-assistant/docs/: example.md
examples/docs-assistant/src/raglift/: pipeline.ts
extensions/vscode-raglift/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-raglift/src/: extension.ts
extensions/vscode-raglift/tests/: extension.test.ts
raglift/: __init__.py  citations.py  cli.py  config.py  graph.py  ingest.py  retriever.py  schemas.py  server.py  state.py
scripts/: setup-vscode.sh
src/: citations.ts  cli.ts  config.ts  index.ts  ingest.ts  retriever.ts  types.ts
src/types/: pdf-parse.d.ts
templates/fastapi-angular/: README.md  docker-compose.yml
templates/fastapi-angular/backend/: raglift.toml  requirements.txt
templates/fastapi-angular/backend/app/: main.py
templates/fastapi-angular/frontend/: Dockerfile  angular.json  package.json
templates/fastapi-angular/frontend/src/: main.ts
tests/: raglift.test.ts  test_config_ingest_graph_cli.py
